--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
                     info.update = function (props) {
                         this._div.innerHTML =
                             "<h4>walkability index </h4>" + (props ?
-                                "</b><br />" + " Indice de Diversity " +props.conv_noRrr+ "</b><br />" 
+                                "</b><br />" + " Index de Walkability " +props.walkab+ "</b><br />" 
                                 : "Survoler une région");
                     };
 
