--- a/index.html
+++ b/index.html
@@ -640,11 +640,8 @@
                         "Proximityt": geojson2,
                         
                         "density": geojson4,
-                        "diversity": geojson5,
-                        "ligne de la navette": ligne,
-                        "tarif pour un abonnement de 1mois": tarifa,
-                        "tarif pour un abonnement de 3mois": tarifb,
-                        "tarif pour un abonnement de 6mois": tarifc
+                        "diversity": geojson5
+                       
 
 
                     };
